# todo-api

./: pyproject.toml
.github/workflows/: publish-openapi.yml  update-docs.yml
src/todo_api/: __init__.py  main.py
